--- a/index.html
+++ b/index.html
@@ -7,29 +7,33 @@
     <title>TITA</title>
     <link rel="icon" type="image/x-icon" href="./images/icon.PNG" />
     <link
-      rel="stylesheet"
-      href="https://kit.fontawesome.com/b16589c213.css"
-      crossorigin="anonymous"
-    />
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+  />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Header Section -->
-    <header>
-      <div class="header container">
-        <img src="./images/Tita-logo.svg" alt="" />
+    <header class="container">
+      <div class="header ">
+       <div class="header-logo">
+        <img class="logo" src="./images/Tita-logo.svg" alt="" />
+        <button class="nav-toggle">
+          <i class="fas fa-bars"></i>
+        </button>
+       </div>
         <nav>
           <ul>
             <li><a href="#">Why TITA?</a></li>
-            <li><a href="#">Products</a></li>
+            <li><a href="#">Used Cases</a></li>
             <li><a href="#">Solutions</a></li>
-            <li><a href="#">Developers</a></li>
+            <!-- <li><a href="#">Developers</a></li> -->
             <li><a href="#">Support</a></li>
           </ul>
         </nav>
       </div>
       <div class="right-section">
-        <p>NGN</p>
+        <img width="30px" height="20px" src="./images/NG.png" alt="">
         <a href="#">Sign in</a>
         <button class="btn btn-light">Create a Free Account</button>
       </div>
@@ -70,7 +74,7 @@
           <img class="vector-2" src="./images/Vector-2.svg" alt="" />
         </div>
         <div class="manage container">
-          <img src="./images/Tita-Home-2.svg" alt="" />
+          <img class="manage-img" src="./images/Tita-Home-2.svg" alt="" />
 
           <div class="manage-content">
             <h1>Manage Everything In Your Hand</h1>
@@ -209,9 +213,8 @@
             <img src="./images/wallet-money.svg" alt="" />
             <p><span>Account</span></p>
             <p>
-              Manage your finance with maximum protection and operates
-              efficiently. you can increase sales, minimize time to payment, and
-              reduce your account costs.
+              Operate and manage your finance with maximum protection and enjoy
+              quick and efficient transaction.
             </p>
 
             <a href="#"
@@ -276,7 +279,7 @@
       </div>
 
       <div class="update container">
-        <h2>Stay Updated</h2>
+        <h2>Stay Updated With TITA</h2>
         <div class="input">
           <input type=email" name="email" id="email" placeholder="Your Email Address">
           <button class="submit">Submit</button>
@@ -325,14 +328,18 @@
         <div class="followUs">
           <p><span>Follow Us</span></p>
           <div class="socials">
-            <a href="""><img src="./images/insta.svg" alt=""></a>
-            <a href="""><img src="./images/twitter.svg" alt=""></a>
-            <a href="""><img src="./images/FB.svg" alt=""></a>
-            <a href="""><img src="./images/LinkedIn.svg" alt=""></a>
+            <a href="https://instagram.com/titafinance?igshid=MDM4ZDc5MmU="
+              ><img src="./images/insta.svg" alt=""
+            /></a>
+            <a href="https://twitter.com/titafinance"
+              ><img src="./images/twitter.svg" alt=""
+            /></a>
+            <a href=""><img src="./images/FB.svg" alt="" /></a>
+            <a href=""><img src="./images/LinkedIn.svg" alt="" /></a>
           </div>
 
           <div class="footer-logo">
-            <img src="./images/TitaLogo-Footer.svg" alt="">
+            <img src="./images/TitaLogo-Footer.svg" alt="" />
           </div>
 
           <p><span>Copyright &copy 2023. All rights Reserved</span></p>
