--- a/index.html
+++ b/index.html
@@ -85,51 +85,53 @@
               in financial planning.
             </p>
 
-            <div class="manage-info">
-              <div><img src="./images/Redefining.svg" alt="" /></div>
-              <div>
-                <p>
-                  <span>Redefining customer experience and transparency.</span>
-                  <br />
-                  Enjoy a painless method that allows you to condition your
-                  business payment transactions for different B2B and P2P
-                  business situations.
-                </p>
+            <div class="manage-rep">
+              <div class="manage-info">
+                <div><img src="./images/Redefining.svg" alt="" /></div>
+                <div>
+                  <p>
+                    <span>Redefining customer experience and transparency.</span>
+                    <br />
+                    Enjoy a painless method that allows you to condition your
+                    business payment transactions for different B2B and P2P
+                    business situations.
+                  </p>
+                </div>
               </div>
-            </div>
-
-            <div class="manage-info">
-              <div><img src="./images/wallet.svg" alt="" /></div>
-              <div>
-                <p>
-                  <span>Wallet</span> <br />
-                  Make money and keep complete control of it with Tita's
-                  individual and business wallet accounts.
-                </p>
+  
+              <div class="manage-info">
+                <div><img src="./images/wallet.svg" alt="" /></div>
+                <div>
+                  <p>
+                    <span>Wallet</span> <br />
+                    Make money and keep complete control of it with Tita's
+                    individual and business wallet accounts.
+                  </p>
+                </div>
               </div>
-            </div>
-
-            <div class="manage-info">
-              <div><img src="./images/payment-system.svg" alt="" /></div>
-              <div>
-                <p>
-                  <span>Payment system for everyday use</span> <br />
-                  Take us on your date, shopping, transport, and paying your
-                  utility bills using Tita tokens, and we can share the bills
-                  with you. Get discounts when you use Tita.
-                </p>
+  
+              <div class="manage-info">
+                <div><img src="./images/payment-system.svg" alt="" /></div>
+                <div>
+                  <p>
+                    <span>Payment system for everyday use</span> <br />
+                    Take us on your date, shopping, transport, and paying your
+                    utility bills using Tita tokens, and we can share the bills
+                    with you. Get discounts when you use Tita.
+                  </p>
+                </div>
               </div>
-            </div>
-
-            <div class="manage-info">
-              <div><img src="./images/solution-puzzel.svg" alt="" /></div>
-              <div>
-                <p>
-                  <span>Solution for your business in mind</span> <br />
-                  Trust, convince, and cost are the core structural problems
-                  Tita aims to solve. Your business type or location is not an
-                  issue for us. There is a solution for just your business.
-                </p>
+  
+              <div class="manage-info">
+                <div><img src="./images/solution-puzzel.svg" alt="" /></div>
+                <div>
+                  <p>
+                    <span>Solution for your business in mind</span> <br />
+                    Trust, convince, and cost are the core structural problems
+                    Tita aims to solve. Your business type or location is not an
+                    issue for us. There is a solution for just your business.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
