--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Header Section -->
-    <header class="container">
+    <div class="container">
+      <!-- Header Section -->
+      <header>
       <div class="header ">
        <div class="header-logo">
         <img class="logo" src="./images/Tita-logo.svg" alt="" />
@@ -42,7 +43,7 @@
 
     <!--Home Section -->
     <section id="home">
-      <div class="home container">
+      <div class="home">
         <div class="home-left-section">
           <h1>Financial Solution For Everyday Living.</h1>
           <p>
@@ -142,7 +143,7 @@
 
     <!-- Used Case Section -->
     <section id="usedCase">
-      <div class="usedCase container">
+      <div class="usedCase">
         <div class="case">
           <h1>Used Cases</h1>
           <div class="cases">
@@ -199,7 +200,7 @@
       <div class="service-bg">
         <img src="./images/Vector-1.svg" alt="" />
       </div>
-      <div class="service container">
+      <div class="service">
         <div class="service-intro">
           <h1>Our Services</h1>
           <p>
@@ -254,7 +255,7 @@
 
     <!-- Payment Method Section -->
     <section id="payment">
-      <div class="payment container">
+      <div class="payment">
         <div class="payment-card">
           <img src="./images/Voucher.svg" alt="" />
           <img src="./images/MasterCard.svg" alt="" />
@@ -280,7 +281,7 @@
         </div>
       </div>
 
-      <div class="update container">
+      <div class="update">
         <h2>Stay Updated With TITA</h2>
         <div class="input">
           <input type=email" name="email" id="email" placeholder="Your Email Address">
@@ -292,7 +293,7 @@
 
     <!-- Footer Section -->
     <section id="footer">
-      <div class="footer container">
+      <div class="footer">
         <div class="features">
           <p><span>Features</span></p>
           <ul>
@@ -349,6 +350,7 @@
       </div>
     </section>
     <!-- End of Footer Section -->
+   </div>
 
     <script src="./script.js"></script>
   </body>
